* chaning directory structure

--- a/configure.ac
+++ b/configure.ac
@@ -4,13 +4,11 @@
 #  Developers - the version number should *NEVER* be changed except by, 
 #  or with explicit permission from, Nils Homer.
 
-# TODO: check that samtools sub-directory exists
-
 AC_PREREQ(2.59);
 AC_INIT([fmap],[0.0.1],[nils.homer@lifetech.com],[fmap])
 AC_COPYRIGHT([See LICENSE for copyright information.])
 AC_CONFIG_AUX_DIR(config)
-AM_INIT_AUTOMAKE([dist-bzip2])
+AM_INIT_AUTOMAKE([dist-bzip2 subdir-objects])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 
@@ -19,6 +17,7 @@ AC_CANONICAL_BUILD
 
 # Check for C and C++ compilers
 AC_PROG_CC
+AM_PROG_CC_C_O
 
 AC_PROG_INSTALL
 AC_GNU_SOURCE
@@ -51,6 +50,9 @@ AC_CHECK_LIB([z], [gzread])
 AC_CHECK_LIB([z], [gzwrite])
 AC_CHECK_LIB([bz2], [BZ2_bzRead])
 AC_CHECK_LIB([m], [pow])
+AC_CHECK_LIB([m], [pow])
+AC_CHECK_LIB([pthread], [pthread_create])
+AC_CHECK_LIB([pthread], [pthread_join])
 AC_CHECK_FUNC(pow, [AC_DEFINE(HAVE_POW, 1, [Define 1 if you have the function pow])],[])
 AC_CHECK_FUNC(strdup, [AC_DEFINE(HAVE_STRDUP, 1, [Define 1 if you have the function strdup])],[])
 
@@ -69,7 +71,7 @@ AC_CHECK_SIZEOF([long int])
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h stdio.h stdint.h string.h sys/time.h unistd.h float.h zlib.h bzlib.h])
+AC_CHECK_HEADERS([stdlib.h stdio.h stdint.h string.h sys/time.h unistd.h float.h zlib.h bzlib.h pthread.h])
 
 AC_C_INLINE
 
