* adding fibonacci heap implementation * map1 functionality initial testing

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS = fmap
 fmap_SOURCES = \
 			   src/util/fmap_error.h src/util/fmap_error.c \
 			   src/util/fmap_alloc.h src/util/fmap_alloc.c \
+			   src/util/fmap_fibheap.h src/util/fmap_fibheap.c \
 			   src/io/fmap_io.h src/io/fmap_io.c \
 			   src/util/fmap_seq.h src/util/fmap_seq.c \
 			   src/io/fmap_seq_io.h src/io/fmap_seq_io.c \
@@ -15,6 +16,7 @@ fmap_SOURCES = \
 			   src/debug/fmap_debug_exact.h src/debug/fmap_debug_exact.c \
 			   src/util/fmap_definitions.h src/util/fmap_definitions.c \
 			   src/util/fmap_progress.h src/util/fmap_progress.c \
+			   src/search/fmap_map1_aux.h src/search/fmap_map1_aux.c \
 			   src/search/fmap_map1.h src/search/fmap_map1.c \
 			   src/main.c
 
