--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,11 @@ fmap_SOURCES = \
 			   src/util/fmap_error.h src/util/fmap_error.c \
 			   src/util/fmap_alloc.h src/util/fmap_alloc.c \
 			   src/util/fmap_fibheap.h src/util/fmap_fibheap.c \
-			   src/io/fmap_io.h src/io/fmap_io.c \
 			   src/util/fmap_seq.h src/util/fmap_seq.c \
+			   src/util/fmap_sff.h src/util/fmap_sff.c \
+			   src/util/fmap_definitions.h src/util/fmap_definitions.c \
+			   src/util/fmap_progress.h src/util/fmap_progress.c \
+			   src/io/fmap_file.h src/io/fmap_file.c \
 			   src/io/fmap_seq_io.h src/io/fmap_seq_io.c \
 			   src/index/fmap_refseq.h src/index/fmap_refseq.c \
 			   src/index/fmap_bwt.h src/index/fmap_bwt.c \
@@ -14,8 +17,6 @@ fmap_SOURCES = \
 			   src/index/fmap_sa.c src/index/fmap_sa.h \
 			   src/index/fmap_index.h src/index/fmap_index.c \
 			   src/debug/fmap_debug_exact.h src/debug/fmap_debug_exact.c \
-			   src/util/fmap_definitions.h src/util/fmap_definitions.c \
-			   src/util/fmap_progress.h src/util/fmap_progress.c \
 			   src/search/fmap_map1_aux.h src/search/fmap_map1_aux.c \
 			   src/search/fmap_map1.h src/search/fmap_map1.c \
 			   src/main.c
