--- a/Makefile.am
+++ b/Makefile.am
@@ -5,11 +5,11 @@ fmap_SOURCES = \
 			   src/util/fmap_alloc.h src/util/fmap_alloc.c \
 			   src/util/fmap_fibheap.h src/util/fmap_fibheap.c \
 			   src/util/fmap_string.h src/util/fmap_string.c \
-			   src/util/fmap_fq.h src/util/fmap_fq.c \
-			   src/util/fmap_sff.h src/util/fmap_sff.c \
-			   src/util/fmap_seq.h src/util/fmap_seq.c \
 			   src/util/fmap_definitions.h src/util/fmap_definitions.c \
 			   src/util/fmap_progress.h src/util/fmap_progress.c \
+			   src/seq/fmap_fq.h src/seq/fmap_fq.c \
+			   src/seq/fmap_sff.h src/seq/fmap_sff.c \
+			   src/seq/fmap_seq.h src/seq/fmap_seq.c \
 			   src/io/fmap_file.h src/io/fmap_file.c \
 			   src/io/fmap_fq_io.h src/io/fmap_fq_io.c \
 			   src/io/fmap_sff_io.h src/io/fmap_sff_io.c \
