* adding in a map3 procedure

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,6 +38,8 @@ fmap_SOURCES = \
 			   src/map/fmap_map2_chain.h src/map/fmap_map2_chain.c \
 			   src/map/fmap_map2_core.h src/map/fmap_map2_core.c \
 			   src/map/fmap_map2_mempool.h src/map/fmap_map2_mempool.c \
+			   src/map/fmap_map3.h src/map/fmap_map3.c \
+			   src/map/fmap_map3_aux.h src/map/fmap_map3_aux.c \
 			   src/fmap_main.h src/fmap_main.c
 
 fmap_LDADD = 
