* small bugs fixed * adding documentation

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,7 @@ fmap_SOURCES = \
 			   src/sfferr/fmap_sfferr.h src/sfferr/fmap_sfferr.c \
 			   src/sfferr/fmap_sfferr_aux.h src/sfferr/fmap_sfferr_aux.c \
 			   src/debug/fmap_debug_exact.h src/debug/fmap_debug_exact.c \
+			   src/map/fmap_map_util.h src/map/fmap_map_util.c \
 			   src/map/fmap_map1.h src/map/fmap_map1.c \
 			   src/map/fmap_map1_aux.h src/map/fmap_map1_aux.c \
 			   src/map/fmap_map2.h src/map/fmap_map2.c \
