* supporting better linking against samtools

--- a/configure.ac
+++ b/configure.ac
@@ -77,7 +77,8 @@ AC_C_INLINE
 AC_MSG_CHECKING(for samtools)
 if test -d "samtools" ; then
 	AC_MSG_RESULT(yes)
-	LDFLAGS="${LDFLAGS} -L./samtools -lbam";
+	LDFLAGS="${LDFLAGS} -L./samtools"
+	LIBS="-lbam ${LIBS}";
 	CFLAGS="${CFLAGS} -I./samtools";
 	AC_DEFINE(HAVE_SAMTOOLS, 1, [Define 1 if the samtools library is present]) 
 else 
