* better handling if the build dir is not a git repository

--- a/configure.ac
+++ b/configure.ac
@@ -26,14 +26,16 @@ AC_GNU_SOURCE
 default_CFLAGS="-Wall -g -O2 -pthread";
 extended_CFLAGS="";# "-m64 -D_FILE_OFFSET_BITS=64";
 
-# Define some variables
-GITREV="Revision: undefined$";
-gitrev="`git log | grep -m 1 commit | awk '{print $2}'`";
+AC_MSG_CHECKING(whether this is a git repository)
+gitrev="`git log 2>/dev/null | grep -m 1 commit | awk '{print $2}'`";
 if test -n "${gitrev}"; then
-	GITREV="${gitrev}";
+    GITREV="${gitrev}";
+    AC_REVISION(["${GITREV}"])
+    AC_DEFINE_UNQUOTED(GIT_REV, "${GITREV}", [Define to be the git revision number])
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
 fi
-AC_REVISION(["${GITREV}"])
-AC_DEFINE_UNQUOTED(GIT_REV, "${GITREV}", [Define to be the git revision number])
 
 AC_ARG_ENABLE(intel64, [  --enable-intel64        optimize for Intel64 CPU such as Xeon and Core2], [extended_CFLAGS="${extended_CFLAGS} -mtune=nocona"], [])
 AC_ARG_ENABLE(bz2, [  --disable-bz2         use this option to disable bz2 support], [AC_DEFINE(DISABLE_BZ2,1,[Define 1 if we want to disable bz2 support])], [AC_CHECK_LIB([bz2], [BZ2_bzRead])])
