--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AM_PROG_CC_C_O
 
 AC_PROG_INSTALL
 AC_GNU_SOURCE
-AC_PROG_RANLIB
+#AC_PROG_RANLIB
 
 # set CFLAGS and CXXFLAGS
 default_CFLAGS="-Wall -g -O2 -pthread";
