--- a/Makefile.am
+++ b/Makefile.am
@@ -34,8 +34,8 @@ tmap_SOURCES = \
 			   ${GLOBAL_SOURCES} \
 			   src/server/tmap_server.h src/server/tmap_server.c \
 			   src/server/tmap_shm.h src/server/tmap_shm.c \
-			   src/misc/tmap_sam2fs_aux.h src/misc/tmap_sam2fs_aux.c \
-			   src/misc/tmap_sam2fs.h src/misc/tmap_sam2fs.c \
+			   src/sam2fs/tmap_sam2fs_aux.h src/sam2fs/tmap_sam2fs_aux.c \
+			   src/sam2fs/tmap_sam2fs.h src/sam2fs/tmap_sam2fs.c \
 			   src/debug/tmap_debug_exact.h src/debug/tmap_debug_exact.c \
 			   src/map/tmap_map_util.h src/map/tmap_map_util.c \
 			   src/map/tmap_map1.h src/map/tmap_map1.c \
