* initial try of vsw, no support for the -a option, and breaks many other assumptions (indel justification)...

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,9 @@ GLOBAL_SOURCES = \
 				 src/index/tmap_refseq.h src/index/tmap_refseq.c \
 				 src/index/tmap_sa.c src/index/tmap_sa.h \
 				 src/sw/tmap_sw.h src/sw/tmap_sw.c \
-				 src/sw/tmap_fsw.h src/sw/tmap_fsw.c 
+				 src/sw/tmap_fsw.h src/sw/tmap_fsw.c \
+				 src/sw/tmap_vsw.h src/sw/tmap_vsw.c \
+				 src/sw/tmap_vsw8.h src/sw/tmap_vsw8.c 
 
 tmap_SOURCES = \
 			   ${GLOBAL_SOURCES} \
