* compiling in, but not yet using the BWT optimizations * re-factoring bwtcheck code for better messages * using bwtcheck to validate the hash creation

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,7 @@ GLOBAL_SOURCES = \
 				 src/io/tmap_sam_io.h src/io/tmap_sam_io.c \
 				 src/io/tmap_seq_io.h src/io/tmap_seq_io.c \
 				 src/index/tmap_bwt.h src/index/tmap_bwt.c \
+				 src/index/tmap_bwt_aux.h src/index/tmap_bwt_aux.c \
 				 src/index/tmap_bwtl.h src/index/tmap_bwtl.c \
 				 src/index/tmap_bwt_gen.h src/index/tmap_bwt_gen.c \
 				 src/index/tmap_bwt_match.h src/index/tmap_bwt_match.c \
