* adding bwt match hash, not tied in yet

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,7 @@ GLOBAL_SOURCES = \
 				 src/index/tmap_bwtl.h src/index/tmap_bwtl.c \
 				 src/index/tmap_bwt_gen.h src/index/tmap_bwt_gen.c \
 				 src/index/tmap_bwt_match.h src/index/tmap_bwt_match.c \
+				 src/index/tmap_bwt_match_hash.h src/index/tmap_bwt_match_hash.c \
 				 src/index/tmap_index.h src/index/tmap_index.c \
 				 src/index/tmap_refseq.h src/index/tmap_refseq.c \
 				 src/index/tmap_sa.c src/index/tmap_sa.h \
