* supporting user CFLAGS

--- a/configure.ac
+++ b/configure.ac
@@ -45,7 +45,7 @@ AC_ARG_ENABLE(debug-functions, [  --enable-debug-functions        use this optio
 AC_ARG_ENABLE(tcmalloc, [  --disable-tcmalloc      disable tcmalloc for memory allocation], [], [AC_CHECK_LIB([tcmalloc],malloc)]) 
 AC_ARG_ENABLE(perftools, [  --enable-perftools      enable google performance tools for profiling and heap checking], [LDFLAGS="${LDFLAGS} -Wl,--no-as-needed -lprofiler"; LDADD="${LDADD} -lprofiler"], [])
 
-CFLAGS="${default_CFLAGS} ${extended_CFLAGS}";
+CFLAGS="${CFLAGS} ${default_CFLAGS} ${extended_CFLAGS}";
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
