--- a/configure.ac
+++ b/configure.ac
@@ -50,8 +50,14 @@ AC_ARG_ENABLE(debug-functions, [  --enable-debug-functions        use this optio
 # NB: what happens if --disable-tcmalloc is used with --enable-perftools ?
 AC_ARG_ENABLE(tcmalloc, [  --disable-tcmalloc      disable tcmalloc for memory allocation], [], [AC_CHECK_LIB([tcmalloc],malloc)]) 
 AC_ARG_ENABLE(perftools, [  --enable-perftools      enable google performance tools for profiling and heap checking], [LDFLAGS="${LDFLAGS} -Wl,--no-as-needed -lprofiler"; LDADD="${LDADD} -lprofiler"], [])
+AC_ARG_ENABLE(32bit-support, 
+			  [  --enable-32bit-support     use this option to enable 32bit support (64bit by default)], 
+			  [AC_MSG_WARN("Using 32-bit SA intervals; Genome sizes limited to 4Gb")
+			  AC_DEFINE(TMAP_BWT_32_BIT,1,[Define 1 if we want to enable TMAP 32bit support])],
+			  [AC_MSG_WARN("Using 64-bit SA intervals; Genome sizes greater than 4Gb are supported")])
 
 CFLAGS="${CFLAGS} ${default_CFLAGS} ${extended_CFLAGS}";
+
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
