--- a/scripts/galaxy/tmap_index.loc.sample
+++ b/scripts/galaxy/tmap_index.loc.sample
@@ -16,13 +16,12 @@
 #and your /depot/data2/galaxy/phiX/base/ directory
 #would contain phiX.fa.* files:
 #
-#-rw-r--r--  1 nilshomer  staff    68B Jan 27 15:53 /data/mapping/genomes/DH10B/DH10B.fa.tmap.anno
-#-rw-r--r--  1 nilshomer  staff   172M Jan 27 15:53 /data/mapping/genomes/DH10B/DH10B.fa.tmap.bwt
-#-rw-r--r--  1 nilshomer  staff   1.1M Jan 27 15:53 /data/mapping/genomes/DH10B/DH10B.fa.tmap.pac
-#-rw-r--r--  1 nilshomer  staff   172M Jan 27 15:53 /data/mapping/genomes/DH10B/DH10B.fa.tmap.rbwt
-#-rw-r--r--  1 nilshomer  staff   1.1M Jan 27 15:53 /data/mapping/genomes/DH10B/DH10B.fa.tmap.rpac
-#-rw-r--r--  1 nilshomer  staff   572K Jan 27 15:54 /data/mapping/genomes/DH10B/DH10B.fa.tmap.rsa
-#-rw-r--r--  1 nilshomer  staff   572K Jan 27 15:54 /data/mapping/genomes/DH10B/DH10B.fa.tmap.sa
+#-rw-r--r--  1 nhomer  staff   5.3K Feb 25 21:19 phi.x.174.fa
+#-rw-r--r--  1 nhomer  staff    24B Feb 24 14:50 phi.x.174.fa.fai
+#-rw-r--r--  1 nhomer  staff    68B Feb 25 21:19 phi.x.174.fa.tmap.anno
+#-rw-r--r--  1 nhomer  staff   1.3M Feb 25 21:19 phi.x.174.fa.tmap.bwt
+#-rw-r--r--  1 nhomer  staff   1.3K Feb 25 21:19 phi.x.174.fa.tmap.pac
+#-rw-r--r--  1 nhomer  staff   2.6K Feb 25 21:19 phi.x.174.fa.tmap.sa
 #...etc...
 #
 #Your tmap_index.loc file should include an entry per line for each
