* adding hashing of SW results across all algorithms * fixing up SW Solution #4 * all SW algorithms have a max qlen/tlen.  When the query/target is too long, we default to VSW #1

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,7 @@ GLOBAL_SOURCES = \
 				 src/sw/lib/Solution9.cpp src/sw/lib/Solution9.h \
 				 src/sw/lib/Solution10.cpp src/sw/lib/Solution10.h \
 				 src/sw/lib/AffineSWOptimization.cpp src/sw/lib/AffineSWOptimization.h \
+				 src/sw/lib/AffineSWOptimizationHash.cpp src/sw/lib/AffineSWOptimizationHash.h \
 				 src/sw/lib/AffineSWOptimizationWrapper.cpp src/sw/lib/AffineSWOptimizationWrapper.h \
 				 src/sw/tmap_vsw_bm.c 
 
